# mahjong-ranking-api

./: .gitignore  API.md  Cargo.toml  README.md  api.http  dataseed.sql
migrations/: 0_init.sql
patches/jsonwebtoken/src/: algorithms.rs
patches/jsonwebtoken/src/crypto/: mod.rs
src/: app.rs  config.rs  db.rs  firebase.rs  game_events.rs  games.rs  main.rs  places.rs  players.rs  rankings.rs  ranks.rs  users.rs  validate.rs
